# Lab678

./: CMakeLists.txt  main.cpp
headers/: Date.h  Document.h  File.h  FileType.h  Generator.h  Path.h  Person.h  Person_old.h  Record.h  RegisterComponent.h  Serializer.h  Statictic.h  UnsupportedOperationException.h
source/: Date.cpp  Document.cpp  File.cpp  FileType.cpp  Generator.cpp  Path.cpp  Person.cpp  Person_old.cpp  Record.cpp  RegisterComponent.cpp  UnsupportedOperationException.cpp
